--- a/Modules/Optimization/parameterization.tex
+++ b/Modules/Optimization/parameterization.tex
@@ -30,14 +30,20 @@
 
 % \graphicspath{{Fig/}}
 
+\AtBeginSection[]{
+  \begin{frame}
+    \tableofcontents[currentsection,currentsubsection]
+  \end{frame}
+}
+
 %--------------------------------------------------------------------------------------
 % \titlegraphic{\includegraphics[scale=0.5]{Fig/logo.pdf}\;\;\;\includegraphics[scale=0.2]{Fig/logo-ISTerre.png}}
-\title[]{Fr\'echet derivatives under various parameterizations \\ using chain rule}
+\title{Fr\'echet derivatives under various parameterizations \\ using chain rule}
 \subtitle{for LEGO module m\_parameterization.f90}
-\author[joey]{joeyartech\\
+\author{joeyartech\\
 \scriptsize{joeywzhou1986@gmail.com}}
-\institute[]{Department of Geosciences, The University of Texas at Dallas}
-%\date[\today]{}
+\institute{The University of Texas at Dallas}
+\date{10/18/2019}
 %--------------------------------------------------------------------------------------
 
 
@@ -134,7 +140,7 @@
     
     \begin{eqnarray}
       \nabla_{\kappa} &=& \nabla_{V_P} \partderi{V_P}{\kappa} \nonumber\\
-                      &=& \nabla_{V_P} \frac{1}{c_1(c_2+2)} \left(\frac{\kappa}{c_1}\right)^{\frac{c_2+1}{c_2+2}} \nonumber
+                      &=& \nabla_{V_P} \frac{1}{c_1(c_2+2)} \left(\frac{\kappa}{c_1}\right)^{-\frac{c_2+1}{c_2+2}} \nonumber
     \end{eqnarray}
   \end{minipage}
 
@@ -220,6 +226,236 @@
 % 		      &=& ... \nonumber
 %     \end{eqnarray}
 %   \end{minipage}
+
+\end{frame}
+
+\section{velocities-impedance}
+
+\begin{frame}\frametitle{PARAMETERIZATION velocities-impedance}
+\framesubtitle{isotropic ACoustic}
+
+  \begin{center}
+    \framebox{$I_P = V_P \rho$}
+  \end{center}
+  
+  \begin{minipage}{0.45\linewidth}
+    \[\left\{ \begin{array}{l}
+      \kappa = \rho V_P^2 = V_PI_P \\
+      \rho_0 = \rho = \frac{I_P}{V_P}
+    \end{array} \right.\]
+    
+    \begin{eqnarray}
+      \nabla_{V_P} &=& \nabla_{\kappa} \partderi{\kappa}{V_P} + \nabla_{\rho_0} \partderi{\rho_0}{V_P} \nonumber\\
+                   &=& \nabla_{\kappa} I_P + \nabla_{\rho_0} (-I_PV_P^{-2}) \nonumber\\
+      \nabla_{I_P} &=& \nabla_{\kappa} \partderi{\kappa}{I_P} + \nabla_{\rho_0} \partderi{\rho_0}{I_P} \nonumber\\
+		   &=& \nabla_{\kappa} V_P + \nabla_{\rho_0} V_P^{-1} \nonumber
+    \end{eqnarray}
+
+  \end{minipage} \vline
+  \begin{minipage}{0.45\linewidth}
+    \[\left\{ \begin{array}{l}
+      V_P  = \sqrt{\frac{\kappa}{\rho_0}} \\
+      I_P = \sqrt{\kappa\rho_0}
+    \end{array} \right.\]
+    
+    \begin{eqnarray}
+      \nabla_{\kappa} &=& \nabla_{V_P} \partderi{V_P}{\kappa} + \nabla_{I_P} \partderi{I_P}{\kappa} \nonumber\\
+                      &=& \nabla_{V_P} \frac{1}{2\rho_0}\sqrt{\frac{\rho_0}{\kappa}} + \nabla_{I_P} \frac{\rho_0}{2\sqrt{\kappa\rho_0}} \nonumber\\
+                      &=& \nabla_{V_P} 0.5\rho_0^{-0.5}\kappa^{-0.5} + \nabla_{I_P} 0.5\rho_0^{0.5}\kappa^{-0.5} \nonumber\\
+                      &=& \left( \nabla_{V_P} + \nabla_{I_P} \rho_0 \right) 0.5\rho_0^{-0.5}\kappa^{-0.5} \nonumber\\
+      \nabla_{\rho_0} &=& \nabla_{V_P} \partderi{V_P}{\rho_0} + \nabla_{I_P} \partderi{I_P}{\rho_0} \nonumber\\
+                      &=& \nabla_{V_P} \frac{-\kappa}{2\rho_0^2}\sqrt{\frac{\rho_0}{\kappa}} + \nabla_{I_P} \frac{\kappa}{2\sqrt{\kappa\rho_0}} \nonumber\\
+                      &=& \nabla_{V_P} (-0.5)\rho_0^{-1.5}\kappa^{0.5} + \nabla_{I_P} 0.5\rho_0^{-0.5}\kappa^{0.5} \nonumber\\
+                      &=& \left(-\nabla_{V_P}\rho_0^{-1} + \nabla_{I_P} \right) 0.5\rho_0^{-0.5}\kappa^{0.5} \nonumber
+    \end{eqnarray}
+  \end{minipage}
+
+\end{frame}
+
+\begin{frame}\frametitle{PARAMETERIZATION velocities-impedance}
+\framesubtitle{isotropic P-SV}
+
+%   \begin{center}
+%     \framebox{$I_P = V_P \rho$}
+%   \end{center}
+  
+  \begin{minipage}{\linewidth}
+    \[\left\{ \begin{array}{l}
+      \lambda = \rho (V_P^2-2V_S^2) = V_PI_P - \frac{2V_S^2I_P}{V_P} \\
+      \mu    = \rho V_S^2 = \frac{V_S^2I_P}{V_P} \\
+      \rho_0 = \rho = \frac{I_P}{V_P}
+    \end{array} \right.\]
+    
+    \begin{eqnarray}
+      \nabla_{V_P} &=& \nabla_\lambda \partderi{\lambda}{V_P} + \nabla_\mu \partderi{\mu}{V_P} + \nabla_{\rho_0} \partderi{\rho_0}{V_P} \nonumber\\
+                   &=& \nabla_\lambda \left(I_P+\frac{2V_S^2I_P}{V_P^2}\right) + \nabla_\mu \left(-\frac{V_S^2I_P}{V_P^2}\right) + \nabla_{\rho_0} \left(-\frac{I_P}{V_P^2}\right) \nonumber\\
+                   &=& \nabla_\lambda \left(I_P+\frac{2V_S^2I_P}{V_P^2}\right) + \nabla_\mu \left(-\frac{V_S^2I_P}{V_P^2}\right) + \nabla_{\rho_0} \left(-\frac{I_P}{V_P^2}\right) \nonumber\\
+                   &=& \left( \nabla_\lambda (V_P^2+2V_S^2) - \nabla_\mu V_S^2 - \nabla_{\rho_0} \right) \frac{I_P}{V_P^2} \nonumber\\
+      \nabla_{V_S} &=& \nabla_\lambda \partderi{\lambda}{V_S} + \nabla_\mu \partderi{\mu}{V_S} + \nabla_{\rho_0} \partderi{\rho_0}{V_S} \nonumber\\
+                   &=& \nabla_\lambda \frac{-4V_SI_P}{V_P} + \nabla_\mu \frac{2V_SI_P}{V_P} \nonumber\\
+                   &=& \left( -2\nabla_\lambda + \nabla_\mu \right) \frac{2V_SI_P}{V_P} \nonumber
+    \end{eqnarray}
+
+  \end{minipage} %\vline
+%   \begin{minipage}{0.45\linewidth}
+%     \[\left\{ \begin{array}{l}
+%       V_P  = \sqrt{\frac{\lambda+2\mu}{\rho_0}} \\
+%       V_S  = \sqrt{\frac{\mu}{\rho_0}} \\
+%       \rho = \rho_0
+%     \end{array} \right.\]
+%     
+%     \begin{eqnarray}
+%       \nabla_{\lambda}&=& \nabla_{V_P} \partderi{V_P}{\lambda} + \nabla_{V_S} \partderi{V_S}{\lambda} + \nabla_{\rho} \partderi{\rho}{\lambda} \nonumber\\
+%                       &=& ... \nonumber\\
+%       \nabla_{\mu}    &=& \nabla_{V_P} \partderi{V_P}{\mu}     + \nabla_{V_S} \partderi{V_S}{\mu}     + \nabla_{\rho} \partderi{\rho}{\mu} \nonumber\\
+% 		      &=& ... \nonumber\\
+%       \nabla_{\rho_0} &=& \nabla_{V_P} \partderi{V_P}{\rho_0}  + \nabla_{V_S} \partderi{V_S}{\rho_0}  + \nabla_{\rho} \partderi{\rho}{\rho_0} \nonumber\\
+% 		      &=& ... \nonumber
+%     \end{eqnarray}
+%   \end{minipage}
+
+\end{frame}
+
+\begin{frame}\frametitle{PARAMETERIZATION velocities-impedance}
+\framesubtitle{isotropic P-SV \textit{continued}}
+  \begin{minipage}{\linewidth}
+    \[\left\{ \begin{array}{l}
+      \lambda = \rho (V_P^2-2V_S^2) = V_PI_P - \frac{2V_S^2I_P}{V_P} \\
+      \mu    = \rho V_S^2 = \frac{V_S^2I_P}{V_P} \\
+      \rho_0 = \rho = \frac{I_P}{V_P}
+    \end{array} \right.\]
+    
+    \begin{eqnarray}
+      \nabla_{I_P} &=& \nabla_\lambda \partderi{\lambda}{I_P} + \nabla_\mu \partderi{\mu}{I_P} + \nabla_{\rho_0} \partderi{\rho_0}{I_P} \nonumber\\
+		   &=& \nabla_\lambda \left(V_P-\frac{2V_S^2}{V_P}\right) + \nabla_\mu \frac{V_S^2}{V_P} + \nabla_{\rho_0} \frac{1}{V_P} \nonumber\\
+		   &=& \left( \nabla_\lambda (V_P^2-2V_S^2) + \nabla_\mu V_S^2 + \nabla_{\rho_0} \right) \frac{1}{V_P} \nonumber
+    \end{eqnarray}
+  \end{minipage}
+\end{frame}
+
+\section{slowness-density}
+
+\begin{frame}\frametitle{PARAMETERIZATION slowness-density}
+\framesubtitle{isotropic ACoustic}
+
+  \begin{center}
+    \framebox{$S_P = 1/V_P$}
+  \end{center}
+  
+  \begin{minipage}{0.5\linewidth}
+    \[\left\{ \begin{array}{l}
+      \kappa = \rho V_P^2 = \rho S_P^{-2} \\
+      \rho_0 = \rho 
+    \end{array} \right.\]
+    
+    \begin{eqnarray}
+      \nabla_{S_P} &=& \nabla_{\kappa} \partderi{\kappa}{S_P} + \nabla_{\rho_0} \partderi{\rho_0}{S_P} \nonumber\\
+                   &=& \nabla_{\kappa} (-2\rho S_P^{-3})  \nonumber\\
+      \nabla_{\rho} &=& \nabla_{\kappa} \partderi{\kappa}{\rho} + \nabla_{\rho_0} \partderi{\rho_0}{\rho} \nonumber\\
+		    &=& \nabla_{\kappa} S_P^{-2} + \nabla_{\rho_0} \nonumber
+    \end{eqnarray}
+
+  \end{minipage} \vline
+  \begin{minipage}{0.45\linewidth}
+    \[\left\{ \begin{array}{l}
+      S_P  = \sqrt{\frac{\rho_0}{\kappa}} \\
+      \rho = \rho_0
+    \end{array} \right.\]
+    
+    \begin{eqnarray}
+      \nabla_{\kappa} &=& \nabla_{S_P} \partderi{S_P}{\kappa} + \nabla_{\rho} \partderi{\rho}{\kappa} \nonumber\\
+                      &=& \nabla_{S_P} \left(\frac{1}{2}\sqrt{\frac{\kappa}{\rho_0}}\frac{-\rho_0}{\kappa^2}\right) \nonumber\\
+                      &=& \nabla_{S_P} (-0.5)\rho_0^{0.5}\kappa^{-1.5} \nonumber\\
+      \nabla_{\rho_0} &=& \nabla_{S_P} \partderi{S_P}{\rho_0} + \nabla_{\rho} \partderi{\rho}{\rho_0} \nonumber\\
+                      &=& \nabla_{S_P} \left(\frac{1}{2}\sqrt{\frac{\kappa}{\rho_0}}\frac{1}{\kappa}\right) + \nabla_{\rho} \nonumber\\
+                      &=& \nabla_{S_P} 0.5\rho_0^{-0.5}\kappa^{-0.5} + \nabla_{\rho} \nonumber
+    \end{eqnarray}
+  \end{minipage}
+
+\end{frame}
+
+\begin{frame}\frametitle{PARAMETERIZATION slowness-density + PASSIVE gardner}
+\framesubtitle{isotropic ACoustic}
+
+  \begin{center}
+    \framebox{$\rho = c_1 S_P^{-c_2}$}
+  \end{center}
+
+  \begin{minipage}{0.5\linewidth}
+    \[\left\{ \begin{array}{l}
+      \kappa = \rho V_P^2 = c_1 S_P^{-c_2-2} \\
+      \rho_0 = \rho = c_1 S_P ^{-c_2}
+    \end{array} \right.\]
+    
+    \begin{eqnarray}
+      \nabla_{S_P} &=& \nabla_{\kappa} \partderi{\kappa}{S_P} + \nabla_{\rho_0} \partderi{\rho_0}{S_P} \nonumber\\
+                   &=& \nabla_{\kappa} c_1(-c_2-2) S_P^{-c_2-3} \nonumber\\
+                   & &+\nabla_{\rho_0} (-c_1c_2) S_P^{-c_2-1} \nonumber\\
+                   &=&-\left( \nabla_{\kappa} c_1(c_2+2) + \nabla_{\rho_0} c_1c_2S_P^2 \right) S_P^{-c_2-3} \nonumber
+    \end{eqnarray}
+
+  \end{minipage} \vline
+  \begin{minipage}{0.45\linewidth}
+    \[ S_P = \left(\frac{\kappa}{c_1}\right)^{-\frac{1}{c_2+2}} \]
+    
+    \begin{eqnarray}
+      \nabla_{\kappa} &=& \nabla_{S_P} \partderi{S_P}{\kappa} \nonumber\\
+                      &=& \nabla_{S_P} \frac{-1}{c_1(c_2+2)} \left(\frac{\kappa}{c_1}\right)^{-\frac{c_2+3}{c_2+2}} \nonumber
+    \end{eqnarray}
+  \end{minipage}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{PARAMETERIZATION slowness-density}
+\framesubtitle{isotropic P-SV}
+  
+  \begin{center}
+    \framebox{$S_{PS} = V_S/V_P = V_SS_P$}
+  \end{center}
+  
+  \[\left\{ \begin{array}{l}
+    \lambda = \rho (V_P^{2}-2V_S ^2) = \rho S_P^{-2} (1-2S_{PS}^2) \\
+    \mu    = \rho V_S^2 = \rho (S_{PS}/S_P)^2 \\
+    \rho_0 = \rho 
+  \end{array} \right.\]
+  
+  \begin{eqnarray}
+    \nabla_{S_P} &=& \nabla_\lambda \partderi{\lambda}{S_P} + \nabla_\mu \partderi{\mu}{S_P} + \nabla_{\rho_0} \partderi{\rho_0}{S_P} \nonumber\\
+		 &=& \nabla_\lambda \rho(-2)S_P^{-3}(1-2S_{PS}^2) + \nabla_\mu \rho S_{PS}^2(-2)S_P^{-3} \nonumber\\
+		 &=& \left(\nabla_\lambda (1-2S_{PS}^2) + \nabla_\mu S_{PS}^2 \right)(-2)\rho S_P^{-3} \nonumber\\
+    \nabla_{S_{PS}} &=& \nabla_\lambda \partderi{\lambda}{S_{PS}} + \nabla_\mu \partderi{\mu}{S_{PS}} + \nabla_{\rho_0} \partderi{\rho_0}{S_{PS}} \nonumber\\
+		    &=& \nabla_\lambda \rho S_P^{-2}(-4)S_{PS} + \nabla_\mu 2\rho S_{PS}/S_P^2 \nonumber\\
+		    &=& \left(-\nabla_\lambda 2 + \nabla_\mu \right) 2\rho S_{PS} S_P^{-2} \nonumber\\
+    \nabla_{\rho} &=& \nabla_\lambda \partderi{\lambda}{\rho} + \nabla_\mu \partderi{\mu}{\rho} + \nabla_{\rho_0} \partderi{\rho_0}{\rho} \nonumber\\
+		  &=& \nabla_\lambda S_P^{-2} (1-2S_{PS}^2) + \nabla_\mu (S_{PS}/S_P)^2 + \nabla_{\rho_0} \nonumber\\
+		  &=& \left(\nabla_\lambda (1-2S_{PS}^2) + \nabla_\mu S_{PS} \right) S_P^{-2} + \nabla_{\rho_0} \nonumber
+  \end{eqnarray}
+
+\end{frame}
+
+\begin{frame}\frametitle{PARAMETERIZATION slowness-density  + PASSIVE gardner}
+\framesubtitle{isotropic P-SV}
+
+  \begin{center}
+    \framebox{$S_{PS} = V_SS_P; \rho = c_1 S_P^{-c_2}$}
+  \end{center}
+  
+  \[\left\{ \begin{array}{l}
+    \lambda = \rho S_P^{-2} (1-2S_{PS}^2) = c_1 S_P^{-c_2-2} (1-2S_{PS}^2) \\
+    \mu    = \rho (S_{PS}/S_P)^2 = c_1 S_P^{-c_2-2} S_{PS}^2\\
+    \rho_0 = c_1 S_P^{-c_2}
+  \end{array} \right.\]
+  
+  \begin{eqnarray}
+    \nabla_{S_P} &=& \nabla_\lambda \partderi{\lambda}{S_P} + \nabla_\mu \partderi{\mu}{S_P} + \nabla_{\rho_0} \partderi{\rho_0}{S_P} \nonumber\\
+		 &=& \nabla_\lambda c_1(-c_2-2)S_P^{-c_2-3}(1-2S_{PS}^2) \nonumber\\
+		 & &+\nabla_\mu c_1(-c_2-2) S_P^{-c_2-3}S_{PS}^2 + \nabla_{\rho_0} c_1(-c_2)S_P^{-c_2-1} \nonumber\\
+		 &=& \left(\nabla_\lambda (c_2+2)(1-2S_{PS}^2) + \nabla_\mu (c_2+2)S_{PS}^2 + \nabla_{\rho_0} c_2S_P^2 \right) (-c_1) S_P^{-c_2-3} \nonumber\\
+    \nabla_{S_{PS}} &=& \nabla_\lambda \partderi{\lambda}{S_{PS}} + \nabla_\mu \partderi{\mu}{S_{PS}} + \nabla_{\rho_0} \partderi{\rho_0}{S_{PS}} \nonumber\\
+		    &=& \nabla_\lambda c_1 S_P^{-c_2-2} (-4)S_{PS} + \nabla_\mu c_1 S_P^{-c_2-2} 2S_{PS} \nonumber\\
+		    &=& \left(-\nabla_\lambda 2 + \nabla_\mu \right) 2c_1S_P^{-c_2-2}S_{PS}\nonumber\\
+  \end{eqnarray}
 
 \end{frame}
 
