--- a/Modules/Optimization/parameterization.tex
+++ b/Modules/Optimization/parameterization.tex
@@ -58,22 +58,75 @@
 % \tableofcontents[section,subsectionstyle=hide/show/show] }}
 
 \begin{frame}\frametitle{Overview}
-  
-  \begin{center}
-    \framebox{WaveEq lm $\Rightarrow$ optim x,g} 
-  \end{center}
 
-  \begin{itemize}
-    \item WaveEq uses lm and produces gkpa, glda, gmu and grho under moduli-density parameterization.
-    \item m\_parameterization.f90 converts them to user-specified parameterization, which can be
+  \begin{block}{Physical meaning of symbols uniformly used in this code:}
+  \begin{tabular}{ll}
+    vp                   & P-wave velocity \\
+    vs                   & S-wave velocity \\
+    sp =1/vp             & P-wave slowness \\
+    sps=vs/vp            & inv Vp-Vs ratio \\
+    ip =vp*rho           & P-wave (acoustic) impedance \\
+    rho                  & density \\
+    kpa=rho*vp\^{}2         & bulk modulus \\
+    lda=rho*(vp\^{}2-2vs\^{}2) & 1st Lam\'e parameter \\
+    mu =rho*vs\^{}2         & 2nd Lam\'e parameter, shear modulus
+  \end{tabular}
+  \end{block}
+  
+\end{frame}
+
+\begin{frame}\frametitle{Overview}
+  
+  \begin{block}{Considered parameterizations}
+  \begin{tabular}{lll}
+    \hline
+    SITUATION    & PARAMETERIZATION & ALLOWED PARAMETERS \\
+    \hline
+    WaveEquation & moduli-density   & kpa (or lda mu) rho \\
+    I/O models   & velocities-density & vp vs rho \\
+    seismic      & velocities-impedance & vp vs ip \\
+    tomography   & slowness-density     & sp sps rho \\
+    optimization & can be any of above \\
+    \hline
+  \end{tabular} 
+  \end{block} 
+
+  \begin{block}{Source-Destination trilogy:}
+    \centering \framebox{model m $\xrightarrow{FWD}$ WaveEq lm $\xrightarrow{PARAMETERIZATION}$ optim x,g $\xrightarrow{FWD}$ model m}
+    
     \begin{itemize}
-      \item moduli-density (kpa, lda, mu, rho)
-      \item velocities-density (vp, vs, rho)
-      \item velocities-impedance (vp, vs, Ip)
-      \item slowness-density (sp, sps, rho)
+      \item model m $\rightarrow$ WaveEq lm depending on field.
+      \item WaveEq produces gkpa (or glda, gmu) and grho under moduli-density parameterization.
+      \item then m\_parameterization.f90 converts them to another parameterization for optim x,g, which can be any of parameterization
     \end{itemize}
-    \item Also we may consider ``passive parameters'' for hard constraints (e.g. Gardner) between these parameters.
+  \end{block}
+  
+\end{frame}
+
+\begin{frame}\frametitle{Overview}
+  
+  \begin{block}{ACTIVE versus PASSIVE}
+  \begin{itemize}
+    \item Active parameters will be converted to optim x via feature scaling (e.g. (par-par\_min)/(par\_max-par\_min)),
+          and will be updated by optimization methods.
+    \begin{itemize}
+      \item Mono-parameter inversion: 1 active parameter.
+      \item Multi-parameter inversion: $>1$ active parameters.
+      \begin{itemize}
+         \item Scaling in m\_linesearch.f90 depends only on the 1st active parameters (no matter of it's velocity or not).
+         \item Output of inversion results has same sequence of active parameters listed in setup.in
+      \end{itemize}
+    \end{itemize}
+
+    \item Passive parameters will NOT be converted to optim x, and will NOT be updated by optimization methods.
+    \item However, they may still be updated according to user-specified empirical law (e.g. Gardner), which serves as hard constraints between parameters.
+      \begin{itemize}
+        \item User has to modified the code where necessary to insert such a law as symbolic computation is not straightforward in fortran
+        \item Such a law may change the optim g for active parameters.
+      \end{itemize}
+      
   \end{itemize}
+  \end{block}    
 
 \end{frame}
 
@@ -118,29 +171,28 @@
 \framesubtitle{isotropic ACoustic}
 
   \begin{center}
-    \framebox{$\rho = c_1 V_P ^{c_2}$}
+    \framebox{$\rho = a V_P ^{b}$}
   \end{center}
 
   \begin{minipage}{0.5\linewidth}
     \[\left\{ \begin{array}{l}
-      \kappa = \rho V_P^2 = c_1 V_P^{c_2+2} \\
-      \rho_0 = \rho = c_1 V_P ^{c_2}
+      \kappa = \rho V_P^2 = a V_P^{b+2} \\
+      \rho_0 = \rho = a V_P ^{b}
     \end{array} \right.\]
     
     \begin{eqnarray}
       \nabla_{V_P} &=& \nabla_{\kappa} \partderi{\kappa}{V_P} + \nabla_{\rho_0} \partderi{\rho_0}{V_P} \nonumber\\
-                   &=& \nabla_{\kappa} c_1(c_2+2) V_P^{c_2+1} \nonumber\\
-                   & &+\nabla_{\rho_0} c_1 c_2 V_P^{c_2-1} \nonumber\\
-                   &=& \left( \nabla_{\kappa} c_1(c_2+2) V_P + \nabla_{\rho_0} \frac{c_1 c_2}{V_P} \right) V_P^{c_2} \nonumber
+                   &=& \nabla_{\kappa} a(b+2) V_P^{b+1} + \nabla_{\rho_0} ab V_P^{b-1} \nonumber\\
+                   &=& \left( \nabla_{\kappa} \frac{b+2}{b} V_P^2 + \nabla_{\rho_0} \right) ab V_P^{b-1} \nonumber
     \end{eqnarray}
 
   \end{minipage} \vline
   \begin{minipage}{0.45\linewidth}
-    \[ V_P = \left(\frac{\kappa}{c_1}\right)^{\frac{1}{c_2+2}} \]
+    \[ V_P = \left(\frac{\kappa}{a}\right)^{\frac{1}{b+2}} \]
     
     \begin{eqnarray}
       \nabla_{\kappa} &=& \nabla_{V_P} \partderi{V_P}{\kappa} \nonumber\\
-                      &=& \nabla_{V_P} \frac{1}{c_1(c_2+2)} \left(\frac{\kappa}{c_1}\right)^{-\frac{c_2+1}{c_2+2}} \nonumber
+                      &=& \nabla_{V_P} \frac{1}{a(b+2)} \left(\frac{\kappa}{a}\right)^{-\frac{b+1}{b+2}} \nonumber
     \end{eqnarray}
   \end{minipage}
 
@@ -160,7 +212,8 @@
       \nabla_{V_P} &=& \nabla_\lambda \partderi{\lambda}{V_P} + \nabla_\mu \partderi{\mu}{V_P} + \nabla_{\rho_0} \partderi{\rho_0}{V_P} \nonumber\\
                    &=& \nabla_\lambda 2\rho V_P \nonumber\\
       \nabla_{V_S} &=& \nabla_\lambda \partderi{\lambda}{V_S} + \nabla_\mu \partderi{\mu}{V_S} + \nabla_{\rho_0} \partderi{\rho_0}{V_S} \nonumber\\
-                   &=& \nabla_\lambda (-4\rho V_S) + \nabla_\mu 2\rho V_S \nonumber\\
+                   &=& \nabla_\lambda (-4)\rho V_S + \nabla_\mu 2\rho V_S \nonumber\\
+                   &=& \left(-\nabla_\lambda 2 + \nabla_\mu \right) 2\rho V_S \nonumber\\
       \nabla_{\rho} &=& \nabla_\lambda \partderi{\lambda}{\rho} + \nabla_\mu \partderi{\mu}{\rho} + \nabla_{\rho_0} \partderi{\rho_0}{\rho} \nonumber\\
 		    &=& \nabla_\lambda (V_P^2-2V_S^2) + \nabla_\mu V_S^2 + \nabla_{\rho_0} \nonumber
     \end{eqnarray}
@@ -189,45 +242,29 @@
 \framesubtitle{isotropic P-SV}
 
   \begin{center}
-    \framebox{$\rho = c_1 V_P ^{c_2}$}
+    \framebox{$\rho = a V_P ^{b}$}
   \end{center}
   
   \begin{minipage}{\linewidth}
     \[\left\{ \begin{array}{l}
-      \lambda = \rho (V_P^2-2V_S^2) = c_1 V_P^{c_2+2} - 2c_1 V_P^{c_2} V_S^2 \\
-      \mu    = \rho V_S^2 = c_1 V_P ^{c_2}V_S^2 \\
-      \rho_0 = \rho = c_1 V_P ^{c_2}
+      \lambda = \rho (V_P^2-2V_S^2) = a V_P^{b+2} - 2a V_P^{b} V_S^2 \\
+      \mu    = \rho V_S^2 = a V_P ^{b}V_S^2 \\
+      \rho_0 = \rho = a V_P ^{b}
     \end{array} \right.\]
     
     \begin{eqnarray}
       \nabla_{V_P} &=& \nabla_\lambda \partderi{\lambda}{V_P} + \nabla_\mu \partderi{\mu}{V_P} + \nabla_{\rho_0} \partderi{\rho_0}{V_P} \nonumber\\
-                   &=& \nabla_\lambda c_1(c_2+2)V_P^{c_2+1}  + \nabla_\lambda (-2)c_1c_2V_P^{c_2-1}V_S^2 \nonumber\\
-                   & &+\nabla_\mu     c_1c_2V_P^{c_2-1}V_S^2 + \nabla_{\rho_0} c_1c_2V_P^{c_2-1} \nonumber\\
-                   &=& \nabla_\lambda \left(c_1(c_2+2)V_P -2c_1c_2V_P^{-1}V_S^2\right)V_P^{c_2} + \left(\nabla_\mu V_S^2 + \nabla_{\rho_0} \right)c_1c_2V_P^{c_2-1} \nonumber\\
+                   &=& \nabla_\lambda \left( a(b+2)V_P^{b+1} - 2abV_P^{b-1}V_S^2\right) + \nabla_\mu     abV_P^{b-1}V_S^2 + \nabla_{\rho_0} abV_P^{b-1} \nonumber\\
+                   &=& \left( \nabla_\lambda \left( \frac{b+2}{b}V_P^2 - 2V_S^2 \right) + \nabla_\mu V_S^2 + \nabla_{\rho_0} \right)abV_P^{b-1} \nonumber\\
       \nabla_{V_S} &=& \nabla_\lambda \partderi{\lambda}{V_S} + \nabla_\mu \partderi{\mu}{V_S} + \nabla_{\rho_0} \partderi{\rho_0}{V_S} \nonumber\\
-                   &=& \nabla_\lambda (-4c_1 V_P^{c_2}V_S) + \nabla_\mu 2c_1V_P^{c_2}V_S \nonumber\\
-                   &=& \left(\nabla_\lambda (-2) + \nabla_\mu \right)2c_1V_P^{c_2}V_S \nonumber
+                   &=& \nabla_\lambda (-4a V_P^{b}V_S) + \nabla_\mu 2aV_P^{b}V_S \nonumber\\
+                   &=& \left(\nabla_\lambda (-2) + \nabla_\mu \right)2aV_P^{b}V_S \nonumber
     \end{eqnarray}
 
-  \end{minipage} %\vline
-%   \begin{minipage}{0.45\linewidth}
-%     \[\left\{ \begin{array}{l}
-%       V_P  = \sqrt{\frac{\lambda+2\mu}{\rho_0}} \\
-%       V_S  = \sqrt{\frac{\mu}{\rho_0}} \\
-%       \rho = \rho_0
-%     \end{array} \right.\]
-%     
-%     \begin{eqnarray}
-%       \nabla_{\lambda}&=& \nabla_{V_P} \partderi{V_P}{\lambda} + \nabla_{V_S} \partderi{V_S}{\lambda} + \nabla_{\rho} \partderi{\rho}{\lambda} \nonumber\\
-%                       &=& ... \nonumber\\
-%       \nabla_{\mu}    &=& \nabla_{V_P} \partderi{V_P}{\mu}     + \nabla_{V_S} \partderi{V_S}{\mu}     + \nabla_{\rho} \partderi{\rho}{\mu} \nonumber\\
-% 		      &=& ... \nonumber\\
-%       \nabla_{\rho_0} &=& \nabla_{V_P} \partderi{V_P}{\rho_0}  + \nabla_{V_S} \partderi{V_S}{\rho_0}  + \nabla_{\rho} \partderi{\rho}{\rho_0} \nonumber\\
-% 		      &=& ... \nonumber
-%     \end{eqnarray}
-%   \end{minipage}
-
+  \end{minipage}
+  
 \end{frame}
+
 
 \section{velocities-impedance}
 
@@ -378,29 +415,29 @@
 \framesubtitle{isotropic ACoustic}
 
   \begin{center}
-    \framebox{$\rho = c_1 S_P^{-c_2}$}
+    \framebox{$\rho = a S_P^{-b}$}
   \end{center}
 
   \begin{minipage}{0.5\linewidth}
     \[\left\{ \begin{array}{l}
-      \kappa = \rho V_P^2 = c_1 S_P^{-c_2-2} \\
-      \rho_0 = \rho = c_1 S_P ^{-c_2}
+      \kappa = \rho V_P^2 = a S_P^{-b-2} \\
+      \rho_0 = \rho = a S_P ^{-b}
     \end{array} \right.\]
     
     \begin{eqnarray}
       \nabla_{S_P} &=& \nabla_{\kappa} \partderi{\kappa}{S_P} + \nabla_{\rho_0} \partderi{\rho_0}{S_P} \nonumber\\
-                   &=& \nabla_{\kappa} c_1(-c_2-2) S_P^{-c_2-3} \nonumber\\
-                   & &+\nabla_{\rho_0} (-c_1c_2) S_P^{-c_2-1} \nonumber\\
-                   &=&-\left( \nabla_{\kappa} c_1(c_2+2) + \nabla_{\rho_0} c_1c_2S_P^2 \right) S_P^{-c_2-3} \nonumber
+                   &=& \nabla_{\kappa} a(-b-2) S_P^{-b-3} \nonumber\\
+                   & &+\nabla_{\rho_0} (-ab) S_P^{-b-1} \nonumber\\
+                   &=&-\left( \nabla_{\kappa} a(b+2) + \nabla_{\rho_0} abS_P^2 \right) S_P^{-b-3} \nonumber
     \end{eqnarray}
 
   \end{minipage} \vline
   \begin{minipage}{0.45\linewidth}
-    \[ S_P = \left(\frac{\kappa}{c_1}\right)^{-\frac{1}{c_2+2}} \]
+    \[ S_P = \left(\frac{\kappa}{a}\right)^{-\frac{1}{b+2}} \]
     
     \begin{eqnarray}
       \nabla_{\kappa} &=& \nabla_{S_P} \partderi{S_P}{\kappa} \nonumber\\
-                      &=& \nabla_{S_P} \frac{-1}{c_1(c_2+2)} \left(\frac{\kappa}{c_1}\right)^{-\frac{c_2+3}{c_2+2}} \nonumber
+                      &=& \nabla_{S_P} \frac{-1}{a(b+2)} \left(\frac{\kappa}{a}\right)^{-\frac{b+3}{b+2}} \nonumber
     \end{eqnarray}
   \end{minipage}
 
@@ -438,23 +475,23 @@
 \framesubtitle{isotropic P-SV}
 
   \begin{center}
-    \framebox{$S_{PS} = V_SS_P; \rho = c_1 S_P^{-c_2}$}
+    \framebox{$S_{PS} = V_SS_P; \rho = a S_P^{-b}$}
   \end{center}
   
   \[\left\{ \begin{array}{l}
-    \lambda = \rho S_P^{-2} (1-2S_{PS}^2) = c_1 S_P^{-c_2-2} (1-2S_{PS}^2) \\
-    \mu    = \rho (S_{PS}/S_P)^2 = c_1 S_P^{-c_2-2} S_{PS}^2\\
-    \rho_0 = c_1 S_P^{-c_2}
+    \lambda = \rho S_P^{-2} (1-2S_{PS}^2) = a S_P^{-b-2} (1-2S_{PS}^2) \\
+    \mu    = \rho (S_{PS}/S_P)^2 = a S_P^{-b-2} S_{PS}^2\\
+    \rho_0 = a S_P^{-b}
   \end{array} \right.\]
   
   \begin{eqnarray}
     \nabla_{S_P} &=& \nabla_\lambda \partderi{\lambda}{S_P} + \nabla_\mu \partderi{\mu}{S_P} + \nabla_{\rho_0} \partderi{\rho_0}{S_P} \nonumber\\
-		 &=& \nabla_\lambda c_1(-c_2-2)S_P^{-c_2-3}(1-2S_{PS}^2) \nonumber\\
-		 & &+\nabla_\mu c_1(-c_2-2) S_P^{-c_2-3}S_{PS}^2 + \nabla_{\rho_0} c_1(-c_2)S_P^{-c_2-1} \nonumber\\
-		 &=& \left(\nabla_\lambda (c_2+2)(1-2S_{PS}^2) + \nabla_\mu (c_2+2)S_{PS}^2 + \nabla_{\rho_0} c_2S_P^2 \right) (-c_1) S_P^{-c_2-3} \nonumber\\
+		 &=& \nabla_\lambda a(-b-2)S_P^{-b-3}(1-2S_{PS}^2) \nonumber\\
+		 & &+\nabla_\mu a(-b-2) S_P^{-b-3}S_{PS}^2 + \nabla_{\rho_0} a(-b)S_P^{-b-1} \nonumber\\
+		 &=& \left(\nabla_\lambda (b+2)(1-2S_{PS}^2) + \nabla_\mu (b+2)S_{PS}^2 + \nabla_{\rho_0} bS_P^2 \right) (-a) S_P^{-b-3} \nonumber\\
     \nabla_{S_{PS}} &=& \nabla_\lambda \partderi{\lambda}{S_{PS}} + \nabla_\mu \partderi{\mu}{S_{PS}} + \nabla_{\rho_0} \partderi{\rho_0}{S_{PS}} \nonumber\\
-		    &=& \nabla_\lambda c_1 S_P^{-c_2-2} (-4)S_{PS} + \nabla_\mu c_1 S_P^{-c_2-2} 2S_{PS} \nonumber\\
-		    &=& \left(-\nabla_\lambda 2 + \nabla_\mu \right) 2c_1S_P^{-c_2-2}S_{PS}\nonumber\\
+		    &=& \nabla_\lambda a S_P^{-b-2} (-4)S_{PS} + \nabla_\mu a S_P^{-b-2} 2S_{PS} \nonumber\\
+		    &=& \left(-\nabla_\lambda 2 + \nabla_\mu \right) 2aS_P^{-b-2}S_{PS}\nonumber\\
   \end{eqnarray}
 
 \end{frame}
