--- a/Modules/Optimization/parameterization.tex
+++ b/Modules/Optimization/parameterization.tex
@@ -83,10 +83,10 @@
     SITUATION    & PARAMETERIZATION & ALLOWED PARAMETERS \\
     \hline
     WaveEquation & moduli-density   & kpa (or lda mu) rho \\
-    I/O models   & velocities-density & vp vs rho \\
+    canonical models   & velocities-density & vp vs rho \\
     seismic      & velocities-impedance & vp vs ip \\
     tomography   & slowness-density     & sp sps rho \\
-    optimization & can be any of above \\
+    optimization & can be any of above & --\\
     \hline
   \end{tabular} 
   \end{block} 
@@ -213,9 +213,10 @@
                    &=& \nabla_\lambda 2\rho V_P \nonumber\\
       \nabla_{V_S} &=& \nabla_\lambda \partderi{\lambda}{V_S} + \nabla_\mu \partderi{\mu}{V_S} + \nabla_{\rho_0} \partderi{\rho_0}{V_S} \nonumber\\
                    &=& \nabla_\lambda (-4)\rho V_S + \nabla_\mu 2\rho V_S \nonumber\\
-                   &=& \left(-\nabla_\lambda 2 + \nabla_\mu \right) 2\rho V_S \nonumber\\
+                   &=& \left(-2\nabla_\lambda + \nabla_\mu \right) 2\rho V_S \nonumber\\
       \nabla_{\rho} &=& \nabla_\lambda \partderi{\lambda}{\rho} + \nabla_\mu \partderi{\mu}{\rho} + \nabla_{\rho_0} \partderi{\rho_0}{\rho} \nonumber\\
-		    &=& \nabla_\lambda (V_P^2-2V_S^2) + \nabla_\mu V_S^2 + \nabla_{\rho_0} \nonumber
+		    &=& \nabla_\lambda (V_P^2-2V_S^2) + \nabla_\mu V_S^2 + \nabla_{\rho_0} \nonumber\\
+		    &=& \nabla_\lambda V_P^2 + (-2\nabla_\lambda + \nabla_\mu)V_S^2  + \nabla_{\rho_0} \nonumber
     \end{eqnarray}
 
   \end{minipage} \vline
@@ -256,9 +257,10 @@
       \nabla_{V_P} &=& \nabla_\lambda \partderi{\lambda}{V_P} + \nabla_\mu \partderi{\mu}{V_P} + \nabla_{\rho_0} \partderi{\rho_0}{V_P} \nonumber\\
                    &=& \nabla_\lambda \left( a(b+2)V_P^{b+1} - 2abV_P^{b-1}V_S^2\right) + \nabla_\mu     abV_P^{b-1}V_S^2 + \nabla_{\rho_0} abV_P^{b-1} \nonumber\\
                    &=& \left( \nabla_\lambda \left( \frac{b+2}{b}V_P^2 - 2V_S^2 \right) + \nabla_\mu V_S^2 + \nabla_{\rho_0} \right)abV_P^{b-1} \nonumber\\
+                   &=& \left( \nabla_\lambda \frac{b+2}{b}V_P^2 + (-2\nabla_\lambda + \nabla_\mu) V_S^2 + \nabla_{\rho_0} \right)abV_P^{b-1} \nonumber\\
       \nabla_{V_S} &=& \nabla_\lambda \partderi{\lambda}{V_S} + \nabla_\mu \partderi{\mu}{V_S} + \nabla_{\rho_0} \partderi{\rho_0}{V_S} \nonumber\\
                    &=& \nabla_\lambda (-4a V_P^{b}V_S) + \nabla_\mu 2aV_P^{b}V_S \nonumber\\
-                   &=& \left(\nabla_\lambda (-2) + \nabla_\mu \right)2aV_P^{b}V_S \nonumber
+                   &=& \left(-2\nabla_\lambda + \nabla_\mu \right)2aV_P^{b}V_S \nonumber
     \end{eqnarray}
 
   \end{minipage}
@@ -284,6 +286,7 @@
     \begin{eqnarray}
       \nabla_{V_P} &=& \nabla_{\kappa} \partderi{\kappa}{V_P} + \nabla_{\rho_0} \partderi{\rho_0}{V_P} \nonumber\\
                    &=& \nabla_{\kappa} I_P + \nabla_{\rho_0} (-I_PV_P^{-2}) \nonumber\\
+                   &=& \left( \nabla_{\kappa} - \nabla_{\rho_0}V_P^{-2} \right)V_P\rho \nonumber\\
       \nabla_{I_P} &=& \nabla_{\kappa} \partderi{\kappa}{I_P} + \nabla_{\rho_0} \partderi{\rho_0}{I_P} \nonumber\\
 		   &=& \nabla_{\kappa} V_P + \nabla_{\rho_0} V_P^{-1} \nonumber
     \end{eqnarray}
@@ -326,11 +329,12 @@
     \begin{eqnarray}
       \nabla_{V_P} &=& \nabla_\lambda \partderi{\lambda}{V_P} + \nabla_\mu \partderi{\mu}{V_P} + \nabla_{\rho_0} \partderi{\rho_0}{V_P} \nonumber\\
                    &=& \nabla_\lambda \left(I_P+\frac{2V_S^2I_P}{V_P^2}\right) + \nabla_\mu \left(-\frac{V_S^2I_P}{V_P^2}\right) + \nabla_{\rho_0} \left(-\frac{I_P}{V_P^2}\right) \nonumber\\
-                   &=& \nabla_\lambda \left(I_P+\frac{2V_S^2I_P}{V_P^2}\right) + \nabla_\mu \left(-\frac{V_S^2I_P}{V_P^2}\right) + \nabla_{\rho_0} \left(-\frac{I_P}{V_P^2}\right) \nonumber\\
                    &=& \left( \nabla_\lambda (V_P^2+2V_S^2) - \nabla_\mu V_S^2 - \nabla_{\rho_0} \right) \frac{I_P}{V_P^2} \nonumber\\
+                   &=& \left( \nabla_\lambda V_P^2 + (2\nabla_\lambda-\nabla_\mu) V_S^2 - \nabla_{\rho_0} \right) \frac{\rho}{V_P} \nonumber\\
       \nabla_{V_S} &=& \nabla_\lambda \partderi{\lambda}{V_S} + \nabla_\mu \partderi{\mu}{V_S} + \nabla_{\rho_0} \partderi{\rho_0}{V_S} \nonumber\\
                    &=& \nabla_\lambda \frac{-4V_SI_P}{V_P} + \nabla_\mu \frac{2V_SI_P}{V_P} \nonumber\\
-                   &=& \left( -2\nabla_\lambda + \nabla_\mu \right) \frac{2V_SI_P}{V_P} \nonumber
+                   &=& \left( -2\nabla_\lambda + \nabla_\mu \right) \frac{2V_SI_P}{V_P} \nonumber\\
+                   &=& \left( -2\nabla_\lambda + \nabla_\mu \right) 2V_S\rho \nonumber
     \end{eqnarray}
 
   \end{minipage} %\vline
@@ -365,7 +369,8 @@
     \begin{eqnarray}
       \nabla_{I_P} &=& \nabla_\lambda \partderi{\lambda}{I_P} + \nabla_\mu \partderi{\mu}{I_P} + \nabla_{\rho_0} \partderi{\rho_0}{I_P} \nonumber\\
 		   &=& \nabla_\lambda \left(V_P-\frac{2V_S^2}{V_P}\right) + \nabla_\mu \frac{V_S^2}{V_P} + \nabla_{\rho_0} \frac{1}{V_P} \nonumber\\
-		   &=& \left( \nabla_\lambda (V_P^2-2V_S^2) + \nabla_\mu V_S^2 + \nabla_{\rho_0} \right) \frac{1}{V_P} \nonumber
+		   &=& \left( \nabla_\lambda (V_P^2-2V_S^2) + \nabla_\mu V_S^2 + \nabla_{\rho_0} \right) \frac{1}{V_P} \nonumber\\
+		   &=& \left( \nabla_\lambda V_P^2 + (-2\nabla_\lambda + \nabla_\mu) V_S^2 + \nabla_{\rho_0} \right) \frac{1}{V_P} \nonumber
     \end{eqnarray}
   \end{minipage}
 \end{frame}
