--- a/Modules/Gradient/parameterization.tex
+++ b/Modules/Gradient/parameterization.tex
@@ -468,7 +468,7 @@
     \nabla_{S_P} &=& \nabla_\lambda \partderi{\lambda}{S_P} + \nabla_\mu \partderi{\mu}{S_P} + \nabla_{\rho_0} \partderi{\rho_0}{S_P} \nonumber\\
 		 &=& \nabla_\lambda \rho(-2)S_P^{-3}(1-2S_{PS}^2) + \nabla_\mu \rho S_{PS}^2(-2)S_P^{-3} \nonumber\\
 		 &=& \left(\nabla_\lambda (1-2S_{PS}^2) + \nabla_\mu S_{PS}^2 \right)(-2)\rho S_P^{-3} \nonumber\\
-		 &=& \left(\nabla_\lambda + (-2\nabla_\lambda + \nabla_\mu) (V_S/V_P)^2 \right)(-2)\rho V_P^3 \nonumber\\
+		 &=& \left(\nabla_\lambda V_P^3 + (-2\nabla_\lambda + \nabla_\mu) V_P V_S^2 \right)(-2)\rho \nonumber\\
     \nabla_{S_{PS}} &=& \nabla_\lambda \partderi{\lambda}{S_{PS}} + \nabla_\mu \partderi{\mu}{S_{PS}} + \nabla_{\rho_0} \partderi{\rho_0}{S_{PS}} \nonumber\\
 		    &=& \nabla_\lambda \rho S_P^{-2}(-4)S_{PS} + \nabla_\mu 2\rho S_{PS}/S_P^2 \nonumber\\
 		    &=& \left(-2\nabla_\lambda + \nabla_\mu \right) 2\rho S_{PS} S_P^{-2} \nonumber\\
