init RnD branch, not yet finished but need to backup due to house moving; do not compile

--- a/Modules/Gradient/parameterization.tex
+++ b/Modules/Gradient/parameterization.tex
@@ -39,7 +39,7 @@
 %--------------------------------------------------------------------------------------
 % \titlegraphic{\includegraphics[scale=0.5]{Fig/logo.pdf}\;\;\;\includegraphics[scale=0.2]{Fig/logo-ISTerre.png}}
 \title{Fr\'echet derivatives under various parameterizations \\ using chain rule}
-\subtitle{for LEGO module m\_parameterization.f90}
+\subtitle{for SeisJIMU module m\_parameterization.f90}
 \author{joeyartech\\
 \scriptsize{joeywzhou1986@gmail.com}}
 \institute{The University of Texas at Dallas}
