add Hilbert transform w/o FFT to be faster in separate_field

--- a/Demo/05_FWIfieldsepa/go.ipynb
+++ b/Demo/05_FWIfieldsepa/go.ipynb
@@ -91,7 +91,6 @@
     "def amp_spec(data,axis=0):\n",
     "    return np.abs(np.fft.rfft(data,axis=axis))\n",
     "\n",
-    "\n",
     "def run(app='../../exe/FWI',setup='setup',np=1,nthreads=8,out=None):\n",
     "    '''\n",
     "    run(app,setup,np=1,nthreads=8)\n",
@@ -107,6 +106,8 @@
     "    '''\n",
     "    \n",
     "    !echo 'ulimit -s unlimited' > run.sh\n",
+    "    str=f\"export OMP_NUM_THREADS={nthreads}\"\n",
+    "    !echo $str >> run.sh\n",
     "    str=f\"{app} {setup}\"\n",
     "    !echo $str >> run.sh\n",
     "    !chmod +x run.sh\n",
@@ -3328,7 +3329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "toc": {
    "base_numbering": 1,
