modif:DAS ex src on FS is good now

--- a/Demo/01_ForwardModeling_DAS_Freesurface/go.ipynb
+++ b/Demo/01_ForwardModeling_DAS_Freesurface/go.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "0201f718",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "f0e993e5",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "5df5d3ec",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "fe50d103",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "9ed3a660",
    "metadata": {
     "scrolled": true
@@ -148,7 +148,6 @@
       "rm: cannot remove '../../mod/m_propagator_WPI.mod': No such file or directory\n",
       "make: [Makefile:24: clean] Error 1 (ignored)\n",
       "\n",
-      "rm: cannot remove '*.o': No such file or directory\n",
       "(cd FWD; make)\n",
       "make[1]: Entering directory '/home/wzhou/Codes/GitHub/SeisJIMU/FWD'\n",
       "#System\n",
@@ -169,27 +168,27 @@
       "#Modeling\n",
       "(cd ../Modules/Modeling; make)\n",
       "make[2]: Entering directory '/home/wzhou/Codes/GitHub/SeisJIMU/Modules/Modeling'\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_model.f90 -o m_model.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_model.f90 -o m_model.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_shotlist_batching.f90 -o m_shotlist_batching.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_shotlist_batching.f90 -o m_shotlist_batching.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_shot.f90 -o m_shot.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_shot.f90 -o m_shot.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_computebox.f90 -o m_computebox.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_computebox.f90 -o m_computebox.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_field.f90 -o m_field.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_field.f90 -o m_field.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_correlate.f90 -o m_correlate.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_correlate.f90 -o m_correlate.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_cpml.f90 -o m_cpml.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_cpml.f90 -o m_cpml.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_propagator_PSV_FDSG_O4.f90 -o m_propagator_PSV_FDSG_O4.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_propagator_PSV_FDSG_O4.f90 -o m_propagator_PSV_FDSG_O4.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_Modeling.f90 -o m_Modeling.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_Modeling.f90 -o m_Modeling.o\n",
       "\n",
       "\n",
       "make[2]: Leaving directory '/home/wzhou/Codes/GitHub/SeisJIMU/Modules/Modeling'\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../mod/ -c main.f90 -o main.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../mod/ -c main.f90 -o main.o\n",
       "\n",
       "mpif90 -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../mod/ ../Modules/System/*.o ../Modules/Etc/*.o ../Modules/Signal/*.o ../Modules/Modeling/m_model.o ../Modules/Modeling/m_shotlist_batching.o ../Modules/Modeling/m_shot.o ../Modules/Modeling/m_computebox.o ../Modules/Modeling/m_correlate.o ../Modules/Modeling/m_field.o ../Modules/Modeling/m_cpml.o ../Modules/Modeling/m_propagator_PSV_FDSG_O4.o ../Modules/Modeling/m_Modeling.o main.o -o ../exe/fwd_PSV_FDSG_O4_\n",
       "\u001b[01m\u001b[K../Modules/Modeling/m_correlate.f90:117:140:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Ktype of ‘\u001b[01m\u001b[Kmpi_reduce\u001b[m\u001b[K’ does not match original declaration [\u001b[01;35m\u001b[K\u001b]8;;https://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html#index-Wlto-type-mismatch\u0007-Wlto-type-mismatch\u001b]8;;\u0007\u001b[m\u001b[K]\n",
@@ -234,13 +233,15 @@
       "#Modeling\n",
       "(cd ../Modules/Modeling; make)\n",
       "make[2]: Entering directory '/home/wzhou/Codes/GitHub/SeisJIMU/Modules/Modeling'\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_model.f90 -o m_model.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_model.f90 -o m_model.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_shotlist_batching.f90 -o m_shotlist_batching.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_shotlist_batching.f90 -o m_shotlist_batching.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_shot.f90 -o m_shot.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_shot.f90 -o m_shot.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_computebox.f90 -o m_computebox.o\n"
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_computebox.f90 -o m_computebox.o\n",
+      "\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_field.f90 -o m_field.o\n"
      ]
     },
     {
@@ -248,19 +249,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_field.f90 -o m_field.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_correlate.f90 -o m_correlate.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_correlate.f90 -o m_correlate.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_cpml.f90 -o m_cpml.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_cpml.f90 -o m_cpml.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_propagator_DAS_FDSG_O4.f90 -o m_propagator_DAS_FDSG_O4.o\n",
       "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_propagator_DAS_FDSG_O4.f90 -o m_propagator_DAS_FDSG_O4.o\n",
-      "\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_Modeling.f90 -o m_Modeling.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../../mod/ -c m_Modeling.f90 -o m_Modeling.o\n",
       "\n",
       "\n",
       "make[2]: Leaving directory '/home/wzhou/Codes/GitHub/SeisJIMU/Modules/Modeling'\n",
-      "mpif90 -cpp -Dgfortran -D\"git_commit='268cd13'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../mod/ -c main.f90 -o main.o\n",
+      "mpif90 -cpp -Dgfortran -D\"git_commit='af38e29'\" -D\"git_branch='DAS_FS'\" -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../mod/ -c main.f90 -o main.o\n",
       "\n",
       "mpif90 -Ofast -fopenmp -ffree-line-length-none -fbacktrace  -fno-unsafe-math-optimizations -frounding-math -fsignaling-nans -J ../mod/ ../Modules/System/*.o ../Modules/Etc/*.o ../Modules/Signal/*.o ../Modules/Modeling/m_model.o ../Modules/Modeling/m_shotlist_batching.o ../Modules/Modeling/m_shot.o ../Modules/Modeling/m_computebox.o ../Modules/Modeling/m_correlate.o ../Modules/Modeling/m_field.o ../Modules/Modeling/m_cpml.o ../Modules/Modeling/m_propagator_DAS_FDSG_O4.o ../Modules/Modeling/m_Modeling.o main.o -o ../exe/fwd_DAS_FDSG_O4_\n",
       "\u001b[01m\u001b[K../Modules/Modeling/m_correlate.f90:117:140:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Ktype of ‘\u001b[01m\u001b[Kmpi_reduce\u001b[m\u001b[K’ does not match original declaration [\u001b[01;35m\u001b[K\u001b]8;;https://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html#index-Wlto-type-mismatch\u0007-Wlto-type-mismatch\u001b]8;;\u0007\u001b[m\u001b[K]\n",
@@ -301,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f6e91284",
    "metadata": {},
    "outputs": [],
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b8bfb024",
    "metadata": {},
    "outputs": [],
@@ -337,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "87ebc276",
    "metadata": {},
    "outputs": [
@@ -1603,9 +1602,9 @@
     "!cp setup_default2 setup\n",
     "\n",
     "# !echo \"IS_FREESURFACE  F\" >> setup\n",
-    "\n",
     "!echo \"SCOMP        px\" >> setup\n",
     "!echo \"RCOMP       'pz px'\" >> setup\n",
+    "!echo \"FS_METHOD    stress_image\" >> setup\n",
     "!echo \"SNAPSHOT    'pz px ez ex es'\" >> setup\n",
     "!echo \"DIR_OUT     res_PE\" >> setup\n",
     "run(app='../../exe/fwd_DAS_FDSG_O4_')"
